--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".tabletennis"></activity>
+        <activity android:name=".tabletennisterm"></activity>
+        <activity android:name=".chessterm" />
+        <activity android:name=".tabletennis" />
         <activity android:name=".chess" />
         <activity android:name=".carrom" />
         <activity android:name=".splash">
